{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 1232,
  "lineage": "f9f8e203-d915-b51b-5de3-4331575f93cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:security-group/sg-061a4e5d15c751cba",
            "description": "Stack IT Security Group For DB ",
            "egress": [],
            "id": "sg-061a4e5d15c751cba",
            "ingress": [],
            "name": "vpc-db-sg-tf",
            "name_prefix": "",
            "owner_id": "721636561061",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Name": "vpc-db-sg-tf",
              "OwnerEmail": "teyojessam.abam@gmail.com",
              "Sessions": "StackCloud10"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "vpc-db-sg-tf",
              "OwnerEmail": "teyojessam.abam@gmail.com",
              "Sessions": "StackCloud10",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:security-group/sg-0763cf29143c394fa",
            "description": "Stack IT Security Group For Bastion ",
            "egress": [],
            "id": "sg-0763cf29143c394fa",
            "ingress": [],
            "name": "vpc-pub-sg-tf",
            "name_prefix": "",
            "owner_id": "721636561061",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Name": "vpc-pub-sg-tf",
              "OwnerEmail": "teyojessam.abam@gmail.com",
              "Sessions": "StackCloud10"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "vpc-pub-sg-tf",
              "OwnerEmail": "teyojessam.abam@gmail.com",
              "Sessions": "StackCloud10",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:security-group/sg-00e98d6e645cf0e20",
            "description": "Stack IT Security Group For App servers ",
            "egress": [],
            "id": "sg-00e98d6e645cf0e20",
            "ingress": [],
            "name": "vpc-web-sg-tf",
            "name_prefix": "",
            "owner_id": "721636561061",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Name": "vpc-web-sg-tf",
              "OwnerEmail": "teyojessam.abam@gmail.com",
              "Sessions": "StackCloud10"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "vpc-web-sg-tf",
              "OwnerEmail": "teyojessam.abam@gmail.com",
              "Sessions": "StackCloud10",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http-vpc-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2765151472",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0763cf29143c394fa",
            "security_group_rule_id": "sgr-04b317a303f89881d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-857026086",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00e98d6e645cf0e20",
            "security_group_rule_id": "sgr-0768fb059cb7da4a8",
            "self": false,
            "source_security_group_id": "sg-0763cf29143c394fa",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "aws_security_group.vpc-web-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-vpc-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1039841632",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0763cf29143c394fa",
            "security_group_rule_id": "sgr-0ed574642e000b125",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2663541660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00e98d6e645cf0e20",
            "security_group_rule_id": "sgr-08298bc207e86aca7",
            "self": false,
            "source_security_group_id": "sg-0763cf29143c394fa",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "aws_security_group.vpc-web-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mySQL-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-998030974",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-061a4e5d15c751cba",
            "security_group_rule_id": "sgr-08f76b8373d2b88e8",
            "self": false,
            "source_security_group_id": "sg-00e98d6e645cf0e20",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-db-sg",
            "aws_security_group.vpc-web-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mySQL-vpc-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-134744287",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0763cf29143c394fa",
            "security_group_rule_id": "sgr-090e8ea1da4d4edd4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mySQL-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-943103305",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00e98d6e645cf0e20",
            "security_group_rule_id": "sgr-0566b768d1aaed2a5",
            "self": false,
            "source_security_group_id": "sg-061a4e5d15c751cba",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-db-sg",
            "aws_security_group.vpc-web-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nfs-vpc-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 2049,
            "id": "sgrule-3283141554",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0763cf29143c394fa",
            "security_group_rule_id": "sgr-0390717d8f748938e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nfs-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-1538874760",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00e98d6e645cf0e20",
            "security_group_rule_id": "sgr-064d65b574f6c22d8",
            "self": false,
            "source_security_group_id": "sg-0763cf29143c394fa",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "aws_security_group.vpc-web-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "oracle-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1521,
            "id": "sgrule-3391165522",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-061a4e5d15c751cba",
            "security_group_rule_id": "sgr-0fcf59b291f221a54",
            "self": false,
            "source_security_group_id": "sg-00e98d6e645cf0e20",
            "timeouts": null,
            "to_port": 1521,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-db-sg",
            "aws_security_group.vpc-web-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "oracle-vpc-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 1521,
            "id": "sgrule-3749855896",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0763cf29143c394fa",
            "security_group_rule_id": "sgr-00e4cb9ca415d7347",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 1521,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "oracle-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1521,
            "id": "sgrule-3379246949",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00e98d6e645cf0e20",
            "security_group_rule_id": "sgr-0668b830a18b43d83",
            "self": false,
            "source_security_group_id": "sg-061a4e5d15c751cba",
            "timeouts": null,
            "to_port": 1521,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-db-sg",
            "aws_security_group.vpc-web-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1582475084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-061a4e5d15c751cba",
            "security_group_rule_id": "sgr-0631d0fa7a856f501",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-db-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound-db-mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-4159171579",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-061a4e5d15c751cba",
            "security_group_rule_id": "sgr-0a78f47f137651b07",
            "self": false,
            "source_security_group_id": "sg-00e98d6e645cf0e20",
            "timeouts": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-db-sg",
            "aws_security_group.vpc-web-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound-vpc-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2464695284",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0763cf29143c394fa",
            "security_group_rule_id": "sgr-0ef8fd5ed4a0d5c19",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1011756322",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00e98d6e645cf0e20",
            "security_group_rule_id": "sgr-03e8c070182b981ff",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-web-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-vpc-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-307921221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0763cf29143c394fa",
            "security_group_rule_id": "sgr-08f351489ae2b9440",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2787881006",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00e98d6e645cf0e20",
            "security_group_rule_id": "sgr-0e15fb7c267f81510",
            "self": false,
            "source_security_group_id": "sg-0763cf29143c394fa",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "aws_security_group.vpc-web-sg",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ASG-LB-BASE[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "stack-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:721636561061:loadbalancer/app/stack-lb-terraform/fa7a91482a311546",
            "arn_suffix": "app/stack-lb-terraform/fa7a91482a311546",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "stack-lb-terraform-681758549.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:721636561061:loadbalancer/app/stack-lb-terraform/fa7a91482a311546",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stack-lb-terraform",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0763cf29143c394fa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04670c832cbf41ac5"
              },
              {
                "subnet_id": "subnet-09be4246d366a5fb1"
              }
            ],
            "subnets": [
              "subnet-04670c832cbf41ac5",
              "subnet-09be4246d366a5fb1"
            ],
            "tags_all": {
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ASG-LB-BASE[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "clixx-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:721636561061:listener/app/stack-lb-terraform/fa7a91482a311546/892903d404141cda",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:721636561061:targetgroup/Stack-ClIXX-TG/609038f524266582",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:721636561061:listener/app/stack-lb-terraform/fa7a91482a311546/892903d404141cda",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:721636561061:loadbalancer/app/stack-lb-terraform/fa7a91482a311546",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "module.ASG-LB-BASE.aws_lb.stack-lb",
            "module.ASG-LB-BASE.aws_lb_target_group.stack-clixx-tg",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ASG-LB-BASE[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "stack-clixx-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:721636561061:targetgroup/Stack-ClIXX-TG/609038f524266582",
            "arn_suffix": "targetgroup/Stack-ClIXX-TG/609038f524266582",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:721636561061:targetgroup/Stack-ClIXX-TG/609038f524266582",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Stack-ClIXX-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "environment": "dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EC2-BASTION-BASE[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_hosts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09fa71c556874b946",
            "arn": "arn:aws:ec2:us-east-1:721636561061:instance/i-0766373c1c728bbee",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "S3_Admin_Access",
            "id": "i-0766373c1c728bbee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkp_vpc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02be2a252922a44d8",
            "private_dns": "ip-10-0-4-167.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.167",
            "public_dns": "ec2-3-84-146-151.compute-1.amazonaws.com",
            "public_ip": "3.84.146.151",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "environment": "dev"
                },
                "throughput": 0,
                "volume_id": "vol-083b3c35ff7361433",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09be4246d366a5fb1",
            "tags": {
              "Name": "bastion-host1"
            },
            "tags_all": {
              "Name": "bastion-host1",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0763cf29143c394fa"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "data.aws_ami.stack_ami",
            "data.template_file.bastion_bootstrap",
            "module.EC2-BASTION-BASE.aws_key_pair.Stack_KP",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09fa71c556874b946",
            "arn": "arn:aws:ec2:us-east-1:721636561061:instance/i-09a1db8e8fd43f729",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "S3_Admin_Access",
            "id": "i-09a1db8e8fd43f729",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkp_vpc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0081a75f66eee289c",
            "private_dns": "ip-10-0-23-120.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.23.120",
            "public_dns": "ec2-44-204-110-158.compute-1.amazonaws.com",
            "public_ip": "44.204.110.158",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "environment": "dev"
                },
                "throughput": 0,
                "volume_id": "vol-0d3bed41deca97e5a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04670c832cbf41ac5",
            "tags": {
              "Name": "bastion-host2"
            },
            "tags_all": {
              "Name": "bastion-host2",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0763cf29143c394fa"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-public-sg",
            "data.aws_ami.stack_ami",
            "data.template_file.bastion_bootstrap",
            "module.EC2-BASTION-BASE.aws_key_pair.Stack_KP",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dc2ea8637d5a5b3",
            "domain": "vpc",
            "id": "eipalloc-08dc2ea8637d5a5b3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-174-249-75.compute-1.amazonaws.com",
            "public_ip": "35.174.249.75",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic_ip-tf_1"
            },
            "tags_all": {
              "Name": "elastic_ip-tf_1",
              "environment": "dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096d49eecec295e1d",
            "domain": "vpc",
            "id": "eipalloc-096d49eecec295e1d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-235-196-69.compute-1.amazonaws.com",
            "public_ip": "54.235.196.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic_ip-tf_2"
            },
            "tags_all": {
              "Name": "elastic_ip-tf_2",
              "environment": "dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:internet-gateway/igw-0ad096d7629eb9ddf",
            "id": "igw-0ad096d7629eb9ddf",
            "owner_id": "721636561061",
            "tags": {
              "Name": "igw-tf"
            },
            "tags_all": {
              "Name": "igw-tf",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dc2ea8637d5a5b3",
            "association_id": "eipassoc-0899a4b8d975e80ea",
            "connectivity_type": "public",
            "id": "nat-0da66c92c104a4a76",
            "network_interface_id": "eni-05f326539f8da55d3",
            "private_ip": "10.0.5.36",
            "public_ip": "35.174.249.75",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09be4246d366a5fb1",
            "tags": {
              "Name": "nat_1a-tf"
            },
            "tags_all": {
              "Name": "nat_1a-tf",
              "environment": "dev"
            }
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096d49eecec295e1d",
            "association_id": "eipassoc-01bf36ecd6a753dea",
            "connectivity_type": "public",
            "id": "nat-0af8cfdbe102c2cf2",
            "network_interface_id": "eni-01c3d5f47a0e704da",
            "private_ip": "10.0.23.4",
            "public_ip": "54.235.196.69",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04670c832cbf41ac5",
            "tags": {
              "Name": "nat_1b-tf"
            },
            "tags_all": {
              "Name": "nat_1b-tf",
              "environment": "dev"
            }
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:route-table/rtb-0c785c85444d6c9b5",
            "id": "rtb-0c785c85444d6c9b5",
            "owner_id": "721636561061",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0da66c92c104a4a76",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/1",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0af8cfdbe102c2cf2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table_tf"
            },
            "tags_all": {
              "Name": "private_route_table_tf",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_nat_gateway.nat_1a",
            "module.VPC-BASE.aws_nat_gateway.nat_1b",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:route-table/rtb-03c4bdcc87045f50e",
            "id": "rtb-03c4bdcc87045f50e",
            "owner_id": "721636561061",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad096d7629eb9ddf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table_tf"
            },
            "tags_all": {
              "Name": "public_route_table_tf",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-BASE.aws_internet_gateway.my_igw",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051921b0c5aaa8112",
            "route_table_id": "rtb-0c785c85444d6c9b5",
            "subnet_id": "subnet-08d7aa9bbde4fe92a"
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_nat_gateway.nat_1a",
            "module.VPC-BASE.aws_nat_gateway.nat_1b",
            "module.VPC-BASE.aws_route_table.private_route_table",
            "module.VPC-BASE.aws_subnet.private_subnets",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5aa160be701c3c8",
            "route_table_id": "rtb-0c785c85444d6c9b5",
            "subnet_id": "subnet-0410a821e7bc4f585"
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_nat_gateway.nat_1a",
            "module.VPC-BASE.aws_nat_gateway.nat_1b",
            "module.VPC-BASE.aws_route_table.private_route_table",
            "module.VPC-BASE.aws_subnet.private_subnets",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ad2a628d78ab660",
            "route_table_id": "rtb-0c785c85444d6c9b5",
            "subnet_id": "subnet-0d0f3d5b01123d254"
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_nat_gateway.nat_1a",
            "module.VPC-BASE.aws_nat_gateway.nat_1b",
            "module.VPC-BASE.aws_route_table.private_route_table",
            "module.VPC-BASE.aws_subnet.private_subnets",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea2875069337a317",
            "route_table_id": "rtb-0c785c85444d6c9b5",
            "subnet_id": "subnet-0c7fc5b209150fc36"
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_nat_gateway.nat_1a",
            "module.VPC-BASE.aws_nat_gateway.nat_1b",
            "module.VPC-BASE.aws_route_table.private_route_table",
            "module.VPC-BASE.aws_subnet.private_subnets",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07be31b4203c5a54d",
            "route_table_id": "rtb-0c785c85444d6c9b5",
            "subnet_id": "subnet-0ad2472b1b6f712d2"
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_nat_gateway.nat_1a",
            "module.VPC-BASE.aws_nat_gateway.nat_1b",
            "module.VPC-BASE.aws_route_table.private_route_table",
            "module.VPC-BASE.aws_subnet.private_subnets",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe24555230dbe1cd",
            "route_table_id": "rtb-0c785c85444d6c9b5",
            "subnet_id": "subnet-082a36798a551a2fe"
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_nat_gateway.nat_1a",
            "module.VPC-BASE.aws_nat_gateway.nat_1b",
            "module.VPC-BASE.aws_route_table.private_route_table",
            "module.VPC-BASE.aws_subnet.private_subnets",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f66a21e9498230e9",
            "route_table_id": "rtb-0c785c85444d6c9b5",
            "subnet_id": "subnet-03e334e6db1853b68"
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_nat_gateway.nat_1a",
            "module.VPC-BASE.aws_nat_gateway.nat_1b",
            "module.VPC-BASE.aws_route_table.private_route_table",
            "module.VPC-BASE.aws_subnet.private_subnets",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c4c441af1e66afd",
            "route_table_id": "rtb-0c785c85444d6c9b5",
            "subnet_id": "subnet-0b954ea185ef71e0e"
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_nat_gateway.nat_1a",
            "module.VPC-BASE.aws_nat_gateway.nat_1b",
            "module.VPC-BASE.aws_route_table.private_route_table",
            "module.VPC-BASE.aws_subnet.private_subnets",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c55e05472d0c9d32",
            "route_table_id": "rtb-0c785c85444d6c9b5",
            "subnet_id": "subnet-0b6d358c85b5bfd6d"
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_nat_gateway.nat_1a",
            "module.VPC-BASE.aws_nat_gateway.nat_1b",
            "module.VPC-BASE.aws_route_table.private_route_table",
            "module.VPC-BASE.aws_subnet.private_subnets",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5afdb37d5c8590e",
            "route_table_id": "rtb-0c785c85444d6c9b5",
            "subnet_id": "subnet-0723625f3f8ed6ec4"
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_nat_gateway.nat_1a",
            "module.VPC-BASE.aws_nat_gateway.nat_1b",
            "module.VPC-BASE.aws_route_table.private_route_table",
            "module.VPC-BASE.aws_subnet.private_subnets",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015b034d57157be9c",
            "route_table_id": "rtb-03c4bdcc87045f50e",
            "subnet_id": "subnet-09be4246d366a5fb1"
          },
          "dependencies": [
            "module.VPC-BASE.aws_internet_gateway.my_igw",
            "module.VPC-BASE.aws_route_table.public_route_table",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa9fd9d45e6be194",
            "route_table_id": "rtb-03c4bdcc87045f50e",
            "subnet_id": "subnet-04670c832cbf41ac5"
          },
          "dependencies": [
            "module.VPC-BASE.aws_internet_gateway.my_igw",
            "module.VPC-BASE.aws_route_table.public_route_table",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:subnet/subnet-08d7aa9bbde4fe92a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d7aa9bbde4fe92a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721636561061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_mysql_1a"
            },
            "tags_all": {
              "Name": "private_subnet_mysql_1a",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:subnet/subnet-0410a821e7bc4f585",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0410a821e7bc4f585",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721636561061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_mysql_1b"
            },
            "tags_all": {
              "Name": "private_subnet_mysql_1b",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:subnet/subnet-0d0f3d5b01123d254",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0f3d5b01123d254",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721636561061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_clixx_1a"
            },
            "tags_all": {
              "Name": "private_subnet_clixx_1a",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:subnet/subnet-0c7fc5b209150fc36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7fc5b209150fc36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721636561061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_clixx_1b"
            },
            "tags_all": {
              "Name": "private_subnet_clixx_1b",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:subnet/subnet-0ad2472b1b6f712d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.24.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad2472b1b6f712d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721636561061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_java_1a"
            },
            "tags_all": {
              "Name": "private_subnet_java_1a",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:subnet/subnet-082a36798a551a2fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.25.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082a36798a551a2fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721636561061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_java_1b"
            },
            "tags_all": {
              "Name": "private_subnet_java_1b",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:subnet/subnet-03e334e6db1853b68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.21.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e334e6db1853b68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721636561061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_javadb_1a"
            },
            "tags_all": {
              "Name": "private_subnet_javadb_1a",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:subnet/subnet-0b954ea185ef71e0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.27.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b954ea185ef71e0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721636561061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_javadb_1a"
            },
            "tags_all": {
              "Name": "private_subnet_javadb_1a",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:subnet/subnet-0b6d358c85b5bfd6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6d358c85b5bfd6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721636561061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_oracledb_1b"
            },
            "tags_all": {
              "Name": "private_subnet_oracledb_1b",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:subnet/subnet-0723625f3f8ed6ec4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.17.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0723625f3f8ed6ec4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721636561061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_oracledb_1b"
            },
            "tags_all": {
              "Name": "private_subnet_oracledb_1b",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:subnet/subnet-09be4246d366a5fb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09be4246d366a5fb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721636561061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1a"
            },
            "tags_all": {
              "Name": "public_subnet_1a",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:subnet/subnet-04670c832cbf41ac5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.22.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04670c832cbf41ac5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721636561061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1b"
            },
            "tags_all": {
              "Name": "public_subnet_1b",
              "environment": "dev"
            },
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:vpc/vpc-06fdf4befa743ea11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/19",
            "default_network_acl_id": "acl-0b0aa3110780cbb83",
            "default_route_table_id": "rtb-0d81fa95d25e6fe79",
            "default_security_group_id": "sg-0a3e63bdb8b4393eb",
            "dhcp_options_id": "dopt-0e051014eead5e40b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fdf4befa743ea11",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d81fa95d25e6fe79",
            "owner_id": "721636561061",
            "tags": {
              "Name": "terra_VPC-infra"
            },
            "tags_all": {
              "Name": "terra_VPC-infra",
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.VPC-BASE[0]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721636561061:vpc-endpoint/vpce-000abc19de7457372",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-000abc19de7457372",
            "owner_id": "721636561061",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c785c85444d6c9b5"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "stack-s3-endpoint-tf"
            },
            "tags_all": {
              "Name": "stack-s3-endpoint-tf",
              "environment": "dev"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06fdf4befa743ea11"
          },
          "dependencies": [
            "module.VPC-BASE.aws_eip.eip1",
            "module.VPC-BASE.aws_eip.eip2",
            "module.VPC-BASE.aws_nat_gateway.nat_1a",
            "module.VPC-BASE.aws_nat_gateway.nat_1b",
            "module.VPC-BASE.aws_route_table.private_route_table",
            "module.VPC-BASE.aws_subnet.public_subnets",
            "module.VPC-BASE.aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}